# qti2latex

./: pyproject.toml  qti2latex.py
